# Android_serial_demo

./: README.md
serial_demo/: settings.gradle
serial_demo/app/: build.gradle
serial_demo/app/src/androidTest/java/com/example/serial_demo/: ExampleInstrumentedTest.java
serial_demo/app/src/main/: AndroidManifest.xml
serial_demo/app/src/main/java/com/example/serial_demo/: MainActivity.java  SerialPortActivity.java
serial_demo/app/src/main/java/com/example/serial_demo/seria/: SerialPort.java  SerialPortFinder.java
serial_demo/app/src/main/jni/: Android.mk  CMakeLists.txt  SerialPort.c  gen_SerialPort_h.sh
serial_demo/app/src/main/res/layout/: activity_main.xml
serial_demo/app/src/main/res/values/: strings.xml  themes.xml
serial_demo/app/src/main/res/values-night/: themes.xml
serial_demo/app/src/test/java/com/example/serial_demo/: ExampleUnitTest.java
serial_demo/gradle/wrapper/: gradle-wrapper.properties
